Fixes in text and in overflow css

--- a/templates/styles/contribution.css
+++ b/templates/styles/contribution.css
@@ -4,7 +4,6 @@
     text-decoration: none;
     list-style: none;
     box-sizing: border-box;
-    overflow: hidden;
 }
 body {
     display: flex;
